--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <title>smilevue</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+      let htmlwidth =document.documentElement.clientWidth||document.body.clientWidth;
+      let htmlDom =document.getElementsByTagName('html')[0];
+      htmlDom.style.fontSize=htmlwidth/20+'px'
+      if(htmlWidth&gt;750){htmlWidth=750}
+    </script>
   </body>
 </html>
