--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script>
-      let htmlwidth =document.documentElement.clientWidth||document.body.clientWidth;
-      let htmlDom =document.getElementsByTagName('html')[0];
+      let htmlwidth =document.documentElement.clientWidth||document.body.clientWidth
+      let htmlDom =document.getElementsByTagName('html')[0]
+      if(htmlwidth>750){htmlwidth=750}
       htmlDom.style.fontSize=htmlwidth/20+'px'
-      if(htmlWidth&gt;750){htmlWidth=750}
+
     </script>
   </body>
 </html>
